--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+*{
+  margin: 0px;
+  padding: 0px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  background-color: #70839b;
+  height: 100vh;
+  width: 100vw;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main{
+  width: 25%;
+  height: 65%;
+  border-radius: 5%;
+  background-color: white;
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
   flex-direction: column;
+  box-shadow: 8px 6px 10px rgba(0, 0, 0, 0.247);
+}
+.heading{
+  width: 100%;
+  padding-top: 5px;
+  margin-top: 25px;
+  background-color: rgb(146, 69, 146);
+  text-align: center;
+  height: 8%;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border-radius: 5% 5% 0px 0px;
+  color: white;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.247);
+}
+.inner{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.inp{
+  border: none;
+  border-bottom: 1px solid black;
+  background-color: white;
+  padding: 0px 10px ;
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: rgb(110, 110, 110);
+  width: 65%;
+  height: 30px;
+  margin-top: 30px;
+  text-align: center;
+}
+input:focus {
+  outline:none;
+}
+.btn{
+  background-color: rgb(146, 69, 146);
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: bolder;
+  font-size: 2rem;
 }
