--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   width: 25%;
   height: 65%;
   border-radius: 5%;
-  background-color: white;
+  background-color: rgb(233, 233, 233);
   display: flex;
   justify-content:flex-start;
   align-items: center;
@@ -31,7 +31,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   border-radius: 5% 5% 0px 0px;
-  color: white;
+  color: rgb(233, 233, 233);
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.247);
 }
 .inner{
@@ -44,7 +44,7 @@
 .inp{
   border: none;
   border-bottom: 1px solid black;
-  background-color: white;
+  background-color: rgb(233, 233, 233);
   padding: 0px 10px ;
   font-size: 1.3rem;
   font-weight: bold;
@@ -62,7 +62,23 @@ input:focus {
   height: 40px;
   width: 40px;
   border-radius: 50%;
-  color: white;
+  color: rgb(233, 233, 233);
   font-weight: bolder;
   font-size: 2rem;
+  border: none;
+}
+.card{
+  width: 100%;
+  background-color: brown;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 1.5rem;
+  width: 80%;
+}
+.del-btn{
+  margin:2% 5%;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
 }
